--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -111,7 +111,9 @@
         Copyright (c) {% now "Y" %} Arizona Board of Regents.  <br/>
         <br />
         </p>
-        <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
+        {% with jquery_version="1.8.2" %}
+        <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
+        {% endwith %}
         <script type='text/javascript' src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/knockout.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/knockout.mapping.min.js'></script>
