--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -2,6 +2,12 @@
 {% block title %}<span data-bind='text: experimentStatusLabel'></span>{% endblock %}
 
 {% block page %}
+<div data-bind='template: { name: roundTypeTemplate }'>
+</div>
+{% endblock page %}
+{% block javascript %}
+{{ block.super }}
+<!-- ko templates -->
 <script type='text/html' id='welcome-template'>
     <p class='lead'>
     Welcome.  This experiment will begin shortly after everyone has been assigned a station.  Please <b>wait quietly and do
@@ -76,13 +82,26 @@ To better illustrate, we will first participate in two practice rounds.  These r
 </div>
 </div>
 </script>
-
-{% endblock page %}
-{% block javascript %}
-{{ block.super }}
 <script type="text/javascript">
     $(function() {
-        $("#vcweb-form").validate({
+        function ExperimentModel(experimentModelJson) {
+            var self = this;
+            var model = ko.mapping.fromJS(experimentModelJson);
+            model.roundTypeTemplate = function (data) {
+                console.log(data);
+            };
+            return model;
+        }
+        function update(experimentModel) {
+            return function(data) {
+                ko.mapping.fromJS(data, experimentModel);
+            }
+        }
+        function initialize(experimentModelJson) {
+            var experimentModel = new ExperimentModel(experimentModelJson);
+            ko.applyBindings(experimentModel);
+            // FIXME: needs to be updated for KO
+            $("#vcweb-form").validate({
                 rules: {
                     harvest_decision: {
                         required: true,
@@ -95,19 +114,21 @@ To better illustrate, we will first participate in two practice rounds.  These r
                         range: "Please enter a number between 0 and {{ max_harvest_decision }}"
                     }
                 },
-        });
-        $('#harvest-decision-id').focus(function() {
-            this.select();
-        });
-        $('#harvest-decision-id').focus();
-        var s = connect();
-        s.onmessage = function(json_string) {
-            var json = jQuery.parseJSON(json_string);
-            switch (json.message_type) {
-            case 'goto':
-                console.log("going to " + json.url);
-                window.location.href = json.url;
-                break;
-            }
-        };
+            });
+            $('#harvest-decision-id').focus(function() {
+                this.select();
+            });
+            $('#harvest-decision-id').focus();
+            var s = connect();
+            s.onmessage = function(json_string) {
+                var json = jQuery.parseJSON(json_string);
+                switch (json.message_type) {
+                    case 'goto':
+                        console.log("going to " + json.url);
+                    window.location.href = json.url;
+                    break;
+                }
+            };
+        }
+    };
 {% endblock %}
