adjusting initial data files to be uniquely named
--HG--
rename : vcweb/boundaries/fixtures/initial_experiment_metadata.json => vcweb/boundaries/fixtures/boundaries_experiment_metadata.json
rename : vcweb/lighterprints/fixtures/initial_experiment_metadata.json => vcweb/lighterprints/fixtures/lighterprints_experiment_metadata.json

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -125,8 +125,8 @@
                 model.messages.unshift(evt.message);
             }
             model.hasParticipants = function() {
-                console.log("participant count: " + model.participantCount);
-                return model.participantCount > 0;
+                console.log("participant count: " + model.participantCount());
+                return model.participantCount() > 0;
             }
             return model;
         }
